# Callora-Contracts

./: Cargo.toml  EVENT_SCHEMA.md  INVARIANTS.md  PR_415_DESCRIPTION.md  PR_STORAGE_TTL_ARCHIVAL.md  PR_SWEEP_IDLE_BALANCE.md  README.md  SECURITY.md  SETTLEMENT_IMPLEMENTATION.md  STORAGE.md  UPGRADE.md  history_lib.rs  patch_compilation.py  patch_init.py  patch_lib.py  patch_migrate.py  patch_mods.py
.github/workflows/: ci.yml  coverage.yml  e2e.yml  gas.yml
contracts/: .gas-baseline.json
contracts/helpers/src/: snapshot_diff.rs
contracts/revenue_pool/: Cargo.toml  IMPLEMENTATION_SUMMARY.md
contracts/revenue_pool/fuzz/: Cargo.toml
contracts/revenue_pool/fuzz/targets/: weighted_distribute.rs
contracts/revenue_pool/src/: emergency.rs  events.rs  lib.rs  test.rs  test_emergency.rs  test_error_codes.rs  test_invariant.rs  (+3 more)
contracts/settlement/: Cargo.toml  INVARIANTS.md
contracts/settlement/src/: admin.rs  archive.rs  batch.rs  errors.rs  events.rs  lib.rs  limits.rs  migrate.rs  pagination.rs  queue.rs  test.rs  test_admin_migration.rs  test_error_codes.rs  test_invariant.rs  test_multi_asset.rs  test_ttl_archival.rs  test_views.rs  types.rs
contracts/tests/: Cargo.toml
contracts/tests/src/: cross_contract_conservation.rs
contracts/vault/: ACCESS_CONTROL.md  Cargo.toml  EVENT_SCHEMA.md  STORAGE.md
contracts/vault/fuzz/: Cargo.toml
contracts/vault/fuzz/targets/: set_auth.rs
contracts/vault/proofs/: deduct.rs
contracts/vault/src/: capabilities.rs  cold_storage.rs  errors.rs  events.rs  lib.rs  limits.rs  rate_limit.rs  rescue.rs  test.rs  test_balance_property.rs  test_capabilities.rs  test_cross_invariant.rs  test_error_codes.rs  test_gas_budget.rs  test_idempotency.rs  test_init_hardening.rs  test_limits.rs  test_rate_limit.rs  test_reentrancy.rs  test_reserve_cap.rs  test_set_auth_fuzz.rs  test_setter_validation.rs  test_sweep_idle_balance.rs  test_ttl_archival.rs  test_views.rs  test_withdraw_to_zero_address.rs  upgrade.rs  views.rs
contracts/vault/tests/: event_order.rs  set_admin_auth.rs  sweep_dryrun.rs  upgrade_events.rs
coverage/: tarpaulin-report.html
docs/: ACCESS_CONTROL.md  CAPABILITIES.md  CEI_AUDIT.md  ERROR_CODES.md  EVENTS_INDEX.md  SETTLEMENT_IMPLEMENTATION.md  revenue-pool-batch-distribute.md
docs/interfaces/: revenue_pool.json  settlement.json  vault.json
scripts/: check-event-shape.sh  check-wasm-size.sh  check_event_schema_coverage.sh  e2e_setup.rs  gas-regression.sh
tests/: conservation_ladder.rs  e2e_full_cycle.rs  event_schema_audit.rs
(+2 files in other folders)
